# repoquery

./: .gitignore  ARCHIVE.md  ARCHIVE_TABLE.md  CHANGELOG.md  CONTENT.md  CONTRIBUTING.md  Cargo.toml  LIST.md  README.md  STARS.md  TABLE.md  deny.toml
.github/workflows/: ci.yml
config/: omnidatum.toml.example  repoquery.toml.example
crates/od-cli/: Cargo.toml
crates/od-cli/src/: main.rs
crates/od-cli/src/commands/: collections.rs  configure.rs  export.rs  generate.rs  import.rs  merge.rs  migrate_credentials.rs  mod.rs  parse.rs  repo.rs  stats.rs  status.rs  sync_cmd.rs  tui.rs  validate.rs
crates/od-cli/tests/: integration_test.rs  mock_adapter.rs
crates/od-core/: Cargo.toml
crates/od-core/benches/: bench_data.rs
crates/od-core/src/: lib.rs  merge.rs  readme_updater.rs
crates/od-core/src/config/: credentials.rs  mod.rs  settings.rs
crates/od-core/src/models/: book.rs  canonical.rs  collection.rs  manual.rs  mod.rs  platform.rs  repository.rs  sync_metadata.rs
crates/od-core/src/parsers/: list_parser.rs
crates/od-generate/: Cargo.toml
crates/od-generate/src/: error.rs  markdown.rs
crates/od-graph/: Cargo.toml
crates/od-graph/src/: error.rs  graph.rs  lib.rs  navigator.rs
crates/od-store/: Cargo.toml
crates/od-store/src/: error.rs  lib.rs  sqlite.rs  traits.rs  yaml.rs
crates/od-sync/: Cargo.toml
crates/od-sync/src/: cache.rs  client.rs  error.rs  lib.rs  orchestrator.rs  progress.rs
crates/od-sync/src/adapters/: codeberg.rs  github.rs  gitlab.rs  graphql.rs  mod.rs
crates/od-validate/: Cargo.toml
crates/od-validate/src/: error.rs  external_data_rules.rs  framework.rs  lib.rs  mod_validators.rs  rules.rs
crates/repoquery/: Cargo.toml
crates/repoquery/src/: main.rs
crates/repoquery/src/commands/: activity.rs  collections.rs  config.rs  configure.rs  expand.rs  export.rs  generate.rs  import.rs  merge.rs  migrate_credentials.rs  mod.rs  parse.rs  repo.rs  stats.rs  status.rs  sync_cmd.rs  tui.rs  validate.rs
crates/repoquery/src/commands/query/: languages.rs  list.rs  mod.rs  search.rs  show.rs  topics.rs
crates/repoquery/src/output/: chart.rs  csv.rs  json.rs  markdown.rs  mod.rs  table.rs
crates/repoquery/tests/: cli_e2e.rs  integration_test.rs  mock_adapter.rs
crates/rq-core/: Cargo.toml
crates/rq-core/benches/: bench_data.rs  query_benchmarks.rs
crates/rq-core/src/: error.rs  lib.rs  merge.rs  readme_updater.rs
crates/rq-core/src/config/: credentials.rs  mod.rs  settings.rs
crates/rq-core/src/models/: activity.rs  book.rs  canonical.rs  manual.rs  mod.rs  reference.rs  relation.rs  repository.rs  seed.rs  sync_metadata.rs
crates/rq-core/src/parsers/: list_parser.rs  mod.rs
crates/rq-expander/: Cargo.toml
crates/rq-expander/src/: collect.rs  lib.rs  platform.rs  traverser.rs  trust.rs
crates/rq-expander/tests/: expander_integration.rs
crates/rq-generate/: Cargo.toml
crates/rq-generate/src/: error.rs  lib.rs  markdown.rs
crates/rq-graph/: Cargo.toml
crates/rq-graph/src/: error.rs  graph.rs  navigator.rs
crates/rq-store/: Cargo.toml
crates/rq-store/src/: dual.rs  error.rs  lib.rs  sqlite.rs  traits.rs  yaml.rs
crates/rq-store/tests/: db_integration.rs
crates/rq-sync/: Cargo.toml
crates/rq-sync/src/: cache.rs  client.rs  error.rs  lib.rs  orchestrator.rs  progress.rs
crates/rq-sync/src/adapters/: codeberg.rs  github.rs  gitlab.rs  graphql.rs  mod.rs
crates/rq-sync/tests/: sync_integration.rs
crates/rq-validate/: Cargo.toml
crates/rq-validate/src/: error.rs  external_data_rules.rs  framework.rs  rules.rs
data/: omnidatum.db  repoquery.db
data/cache/: final_validation.json  sync_metadata.json  sync_quality_report.json  validation_report.json
data/canonical/: books.yml  manual_additions.yml  merged_data.yml  repositories.yml  web_references.yml
data/templates/: list.md.tera  table.md.tera
docs/: API_REFERENCE.md  ARCHITECTURE.md  CLI_COMMAND_REFERENCE.md  CONFIGURATION.md  DATA_SYNC.md  DEVELOPMENT.md  INTEGRATION_GUIDE_GIT_REPOSITORY.md  INTEGRATION_GUIDE_GOOGLE_SHEETS.md  INTEGRATION_GUIDE_INDEX.md  INTEGRATION_GUIDE_JIRA.md  README.md  SECURITY_PRACTICES.md  SPECS_PORTED_FROM_REPOSQL.md  STORAGE_MODES.md  TROUBLESHOOTING.md  aiml_modernization_proposal.md
docs/archive/: BASELINE_SUMMARY.md  DOCUMENTATION_SUMMARY.md  FINAL_VERIFICATION_REPORT.md  IMPLEMENTATION_STATUS.md  PROJECT_SUMMARY.md  README.md  ROLLBACK_PROCEDURE.md  UPDATE_RUNBOOK.md  gap_analysis.md
docs/diagrams/: components.mmd  data-flow.mmd  pipeline.mmd  sync-sequence.mmd
docs/ecosystems/: bitwarden.md
generated-docs/: BACKEND.md  README.md  repomix_output.xml
reports/: cleanup_candidates.md
scripts/: analyze_healthy.py  apply_tags.py  audit_all_repos.py  classify_nonhealthy.py  generate-diagrams.sh
tests/: integration_test.rs  mock_adapter.rs
