[workspace]
members = [
    "crates/rq-core",
    "crates/rq-expander",
    "crates/rq-validate",
    "crates/rq-generate",
    "crates/rq-graph",
    "crates/rq-sync",
    "crates/rq-store",
    "crates/repoquery",
]
resolver = "2"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "warn"
panic = "deny"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"

# Async
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "sync", "rt", "time"] }
async-trait = "0.1"

# GitHub API
octocrab = "0.53"
reqwest = { version = "0.12", features = ["json"] }
hyper-rustls = "0.27"

# Template engine
tera = "1.20"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }
time = "0.3.47"
bytes = "1.11"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Regex
regex = "1.10"

# Graph
petgraph = "0.6"

# Crypto
sha2 = "0.10"
hex = "0.4"

# File locking
fs2 = "0.4"

# Config
toml = "0.8"
dirs = "5.0"

# Progress bars
indicatif = "0.17"

# CLI
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
clap_mangen = "0.3"
terminal_size = "0.4"

# TLS (for security updates)
rustls = "0.23"
rustls-webpki = "0.103"

# SQLite
rusqlite = { version = "0.31", features = ["bundled"] }

# TUI
ratatui = "0.28"
crossterm = "0.28"

# Dev
pretty_assertions = "1.4"
serial_test = "3.1"
tempfile = "3.10"
mockito = "1.5"
assert_cmd = "2.0"
predicates = "3.1"
criterion = { version = "0.5", features = ["html_reports"] }

# Internal crates
rq-core = { path = "crates/rq-core" }
rq-expander = { path = "crates/rq-expander" }
rq-validate = { path = "crates/rq-validate" }
rq-generate = { path = "crates/rq-generate" }
rq-graph = { path = "crates/rq-graph" }
rq-sync = { path = "crates/rq-sync" }
rq-store = { path = "crates/rq-store" }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"