[package]
name = "od-generate"
version = "0.1.0"
edition = "2021"

[dependencies]
od-core = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tera = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
