[package]
name = "od-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
od-core = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
octocrab = { workspace = true }
reqwest = { workspace = true }
indicatif = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
serde_yml = { workspace = true }
