[package]
name = "repoquery"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "repoquery"
path = "src/main.rs"

[dependencies]
rq-core = { workspace = true }
rq-expander = { workspace = true }
rq-store = { workspace = true }
rq-sync = { workspace = true }
rq-validate = { workspace = true }
rq-generate = { workspace = true }
rq-graph = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
chrono = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
terminal_size = { workspace = true }
clap_complete = { workspace = true }
clap_mangen = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
pretty_assertions = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }
async-trait = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
