[package]
name = "rq-expander"
version = "0.1.0"
edition = "2021"

[dependencies]
rq-core = { workspace = true }
rq-store = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
octocrab = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tempfile = { workspace = true }
