[package]
name = "rq-generate"
version = "0.1.0"
edition = "2021"

[dependencies]
rq-core = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tera = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
pretty_assertions = { workspace = true }
