[package]
name = "rq-validate"
version = "0.1.0"
edition = "2021"

[dependencies]
rq-core = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
pretty_assertions = { workspace = true }
